--- a/OSImage/POS_Image-JeOS7-agent/root/etc/salt/minion.d/susemanager.conf
+++ b/OSImage/POS_Image-JeOS7-agent/root/etc/salt/minion.d/susemanager.conf
@@ -6,4 +6,4 @@ mine_enabled: False
 
 grains:
     susemanager:
-      activation_key: "1-sle15sp2-k3s"
+      activation_key: "1-sle15sp2-k3s-agent"
